--- a/css/style.css
+++ b/css/style.css
@@ -33,15 +33,23 @@ li {
 	color: white;
 }
 
-li a {
-	color: white;
-	text-decoration: none;
-}
-
 /* CSS for hover effect */
 li:hover {
-	background-color: black;
+    color: black;
 }
+
+li a {
+	text-decoration: none;
+    font-family: Verdana;
+	font-size: 15px;
+    font-weight: 100;
+    color: white;
+}
+
+li a:hover {
+    color: black;
+}
+
 
 /* CSS for banner section */
 .banner {
@@ -243,6 +251,68 @@ li:hover {
 	text-align: justify;
 	font-family: Verdana;
 	line-height: 30px;
+}
+
+.project-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.project-item {
+    display: block;
+    position: relative;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.project-item img {
+    width: 100%;
+    height: 300px;
+}
+
+.caption {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    padding: 10px;
+    font-size: 16px;
+    text-align: center;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.social-icons {
+    margin-right: 10px;
+}
+
+.social-icons a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
+.footer-content p {
+    margin: 0;
 }
 
 /* CSS for responsive design */
