--- a/css/style.css
+++ b/css/style.css
@@ -1,428 +1,451 @@
-        /* CSS for header */
-        header {
-            background-color: red;
-            padding: 10px;
-            display: flex;
-            align-items: center;
-            z-index: 1000;
-        }
-        
-        
-        /* CSS for logo */
-        .logo {
-            width: 100px;
-            height: 50px;
-            margin: 0;
-            color: white;
-        }
-        
-        /* CSS for navigation bar */
-        nav {
-            margin-left: auto;
-        }
-        
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-        }
-        
-        li {
-            margin-right: 10px;
-            color: white;
-        }
-        
-        /* CSS for hover effect */
-        li:hover {
-            color: black;
-        }
-        
-        li a {
-            text-decoration: none;
-            font-family: Verdana;
-            font-size: 15px;
-            font-weight: 100;
-            color: white;
-        }
-        
-        li a:hover {
-            color: black;
-        }
-        
-        
-        /* CSS for banner section */
-        .banner {
-            background-color: white;
-            color: black;
-            padding: 20px;
-            text-align: center;
-            width: 100%;
-            height: 600px;
-            margin: 0 auto;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
-        
-        .banner h1 {
-            font-size: 70px;
-            margin: 0px;
-        
-        }
-        
-        .banner p {
-            font-size: 22px;
-        }
-        
-        .social-links {
-            margin-top: 20px;
-        }
-        
-        .social-links a {
-            color: black;
-            text-decoration: none;
-            margin-right: 10px;
-        }
-        
-        /* CSS for education section */
-        .education-section {
-            background-color: #f9f9f9;
-            padding: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-        
-        .education-content {
-            width: 80%;
-            max-width: 800px;
-        }
-        
-        .education-content h2 {
-            text-align: center;
-            font-family: Verdana;
-            font-size: 30px;
-        }
-        
-        .education-item {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-        
-        .college {
-            font-weight: bold;
-        }
-        
-        .year-subject {
-            margin-top: 10px;
-        }
-        
-        .achievement {
-            font-style: italic;
-        }
-        
-        /* CSS for projects section */
-        .projects-section {
-            background-color: #f2f2f2;
-            padding: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-        
-        
-        .projects-content h2 {
-            text-align: center;
-            font-family: Verdana;
-            font-size: 30px;
-        }
-        
-        .projects-content {
-            width: 80%;
-            max-width: 800px;
-        }
-        
-        .project-item {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-        
-        
-        .client {
-            font-weight: bold;
-        }
-        
-        .duration-amount {
-            margin-top: 10px;
-        }
-        
-        .certificate-section {
-            background-color: #f9f9f9;
-            padding: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-        
-        .certificate-content {
-            width: 80%;
-            max-width: 800px;
-        }
-        
-        .certificate-content h2 {
-            text-align: center;
-            font-family: Verdana;
-            font-size: 30px;
-        }
-        
-        .certificate-item {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-        
-        .college {
-            font-weight: bold;
-        }
-        
-        .year {
-            margin-top: 10px;
-        }
-        
-        .certificate-link a {
-            color: #333;
-            text-decoration: none;
-        }
-        
-        /* CSS for gallery section */
-        .gallery-section {
-            padding: 20px;
-            background-color: #f9f9f9;
-            text-align: center;
-        }
-        
-        .gallery-section h2 {
-            font-family: Verdana;
-            font-size: 30px;
-        }
-        
-        .gallery-row {
-            display: flex;
-            justify-content: center;
-            /* Center the gallery row */
-            margin-bottom: 20px;
-        }
-        
-        .gallery-item {
-            flex-basis: calc(33.33% - 10px);
-            /* Three items per row with a 10px gap */
-            overflow: hidden;
-        }
-        
-        .gallery-item img {
-            width: 100%;
-            height: auto;
-        }
-        
-        .red {
-            color: red;
-        }
-        
-        .about-section {
-            background-color: #f9f9f9;
-            padding: 20px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-        }
-        
-        .about-content {
-            width: 80%;
-            max-width: 800px;
-        }
-        
-        .about-content h2 {
-            text-align: center;
-            font-family: Verdana;
-            font-size: 30px;
-        }
-        
-        .about-content p {
-            text-align: justify;
-            font-family: Verdana;
-            line-height: 30px;
-        }
-        
-        .project-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            margin-top: 20px;
-        }
-        
-        .project-item {
-            display: block;
-            position: relative;
-            overflow: hidden;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            text-decoration: none;
-        }
-        
-        .project-item img {
-            width: 100%;
-            height: 300px;
-        }
-        
-        .caption {
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.7);
-            color: #fff;
-            padding: 10px;
-            font-size: 16px;
-            text-align: center;
-        }
-        
-        footer {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        
-        .footer-content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-wrap: wrap;
-        }
-        
-        .social-icons {
-            margin-right: 10px;
-        }
-        
-        .social-icons a {
-            color: #fff;
-            text-decoration: none;
-            margin-right: 10px;
-            font-size: 20px;
-        }
-        
-        .footer-content p {
-            margin: 0;
-        }
-        
-        
-/* CSS for Action Section */
-.action-section {
-    text-align: center;
-    padding: 15px;
-  }
-  
-  .action-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #FF0000;
-    color: #FFFFFF;
-    text-decoration: none;
-    transition: background-color 0.3s, color 0.3s;
-  }
-  
-  .action-button:hover {
-    background-color: #FFFFFF;
-    color: #FF0000;
-  }
-  
-  /* Responsive Styles */
-  @media screen and (max-width: 768px) {
-    .action-button {
-      padding: 8px 16px;
+body {
+	margin: 0px
+}
+
+/* CSS for header */
+header {
+	background-color: red;
+	display: flex;
+	align-items: center;
+	z-index: 1000;
+    position: fixed;
+    width: 100%;
+}
+
+/* CSS for logo */
+.logo {
+	width: 100px;
+	height: 50px;
+	margin: 0;
+    padding-left: 15px;
+	color: white;
+}
+
+/* CSS for navigation bar */
+nav {
+	margin-left: auto;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	display: flex;
+}
+
+li {
+	color: white;
+	padding: 15px;
+	width: 75px;
+	text-align: center;
+}
+
+/* CSS for hover effect */
+li:hover {
+	color: black;
+	background-color: black;
+	color: white;
+}
+
+li a {
+	text-decoration: none;
+	font-family: Verdana;
+	font-size: 15px;
+	font-weight: 100;
+	color: white;
+
+}
+
+
+/* CSS for banner section */
+.banner {
+	background-color: white;
+	color: black;
+	padding: 20px;
+	text-align: center;
+	width: 100%;
+	height: 600px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.banner h1 {
+	font-size: 70px;
+	margin: 0px;
+    animation: bounce 1s infinite;
+
+}
+
+.banner p {
+	font-size: 22px;
+}
+
+.social-links {
+	margin-top: 20px;
+}
+
+.social-links a {
+	color: black;
+	text-decoration: none;
+	margin-right: 10px;
+}
+
+/* CSS for education section */
+.education-section {
+	background-color: #f9f9f9;
+	padding: 20px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.education-content {
+	width: 80%;
+	max-width: 800px;
+}
+
+.education-content h2 {
+	text-align: center;
+	font-family: Verdana;
+	font-size: 30px;
+}
+
+.education-item {
+	margin-bottom: 20px;
+	text-align: left;
+}
+
+.college {
+	font-weight: bold;
+}
+
+.year-subject {
+	margin-top: 10px;
+}
+
+.achievement {
+	font-style: italic;
+}
+
+/* CSS for projects section */
+.projects-section {
+	background-color: #f2f2f2;
+	padding: 20px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+
+.projects-content h2 {
+	text-align: center;
+	font-family: Verdana;
+	font-size: 30px;
+}
+
+.projects-content {
+	width: 80%;
+	max-width: 800px;
+}
+
+.project-item {
+	margin-bottom: 20px;
+	text-align: left;
+}
+
+
+.client {
+	font-weight: bold;
+}
+
+.duration-amount {
+	margin-top: 10px;
+}
+
+.certificate-section {
+	background-color: #f9f9f9;
+	padding: 20px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.certificate-content {
+	width: 80%;
+	max-width: 800px;
+}
+
+.certificate-content h2 {
+	text-align: center;
+	font-family: Verdana;
+	font-size: 30px;
+}
+
+.certificate-item {
+	margin-bottom: 20px;
+	text-align: left;
+}
+
+.college {
+	font-weight: bold;
+}
+
+.year {
+	margin-top: 10px;
+}
+
+.certificate-link a {
+	color: #333;
+	text-decoration: none;
+}
+
+/* CSS for gallery section */
+.gallery-section {
+	padding: 20px;
+	background-color: #f9f9f9;
+	text-align: center;
+}
+
+.gallery-section h2 {
+	font-family: Verdana;
+	font-size: 30px;
+}
+
+.gallery-row {
+	display: flex;
+	justify-content: center;
+	/* Center the gallery row */
+	margin-bottom: 20px;
+}
+
+.gallery-item {
+	flex-basis: calc(33.33% - 10px);
+	/* Three items per row with a 10px gap */
+	overflow: hidden;
+    padding: 0 5px 0 5px;
+    
+}
+
+.gallery-item img {
+	width: 100%;
+	height: auto;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+@keyframes bounce {
+    0% {
+      transform: translateY(0);
+    }
+    50% {
+      transform: translateY(-20px);
+    }
+    100% {
+      transform: translateY(0);
     }
   }
+  
+.red {
+	color: red;
+}
 
-        /* CSS for responsive design */
-        @media only screen and (max-width: 768px) {
-          /* Adjustments for smaller screens */
-        
-          /* Header */
-          header {
-            flex-direction: column;
-            align-items: flex-start;
-          }
-        
-          .logo {
-            margin-bottom: 10px;
-          }
-        
-          nav {
-            margin-top: 10px;
-            margin-left: 0;
-          }
-        
-          /* Banner */
-          .banner {
-            height: auto;
-            padding: 40px 20px;
-          }
-        
-          .banner h1 {
-            font-size: 40px;
-          }
-        
-          .banner p {
-            font-size: 18px;
-          }
-        
-          /* About section */
-          .about-content {
-            width: 100%;
-          }
-        
-          /* Education section */
-          .education-content {
-            width: 100%;
-          }
-        
-          /* Certificate section */
-          .certificate-content {
-            width: 100%;
-          }
-        
-          /* Gallery section */
-          .gallery-item {
-            flex-basis: calc(50% - 10px);
-          }
-        }
-        
-        @media only screen and (max-width: 480px) {
-          /* Further adjustments for smaller screens */
-        
-          /* Banner */
-          .banner h1 {
-            font-size: 30px;
-          }
-        
-          .banner p {
-            font-size: 16px;
-          }
-        
-          /* Education section */
-          .education-item,
-          .certificate-item {
-            text-align: center;
-          }
-        
-          .year-subject,
-          .year,
-          .certificate-link {
-            margin-top: 5px;
-          }
-        
-          /* Gallery section */
-          .gallery-item {
-            flex-basis: 100%;
-          }
-        }
+.about-section {
+	background-color: #f9f9f9;
+	padding: 20px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+}
+
+.about-content {
+	width: 80%;
+	max-width: 800px;
+}
+
+.about-content h2 {
+	text-align: center;
+	font-family: Verdana;
+	font-size: 30px;
+}
+
+.about-content p {
+	text-align: justify;
+	font-family: Verdana;
+	line-height: 30px;
+}
+
+.project-grid {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 20px;
+	margin-top: 20px;
+}
+
+.project-item {
+	display: block;
+	position: relative;
+	overflow: hidden;
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	text-decoration: none;
+}
+
+.project-item img {
+	width: 100%;
+	height: 300px;
+}
+
+.caption {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: #fff;
+	padding: 10px;
+	font-size: 16px;
+	text-align: center;
+}
+
+footer {
+	background-color: #333;
+	color: #fff;
+	padding: 20px;
+	text-align: center;
+}
+
+.footer-content {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.social-icons {
+	margin-right: 10px;
+}
+
+.social-icons a {
+	color: #fff;
+	text-decoration: none;
+	margin-right: 10px;
+	font-size: 20px;
+}
+
+.footer-content p {
+	margin: 0;
+}
+
+
+/* CSS for Action Section */
+.action-section {
+	text-align: center;
+	padding: 15px;
+}
+
+.action-button {
+	display: inline-block;
+	padding: 10px 20px;
+	background-color: #FF0000;
+	color: #FFFFFF;
+	text-decoration: none;
+	transition: background-color 0.3s, color 0.3s;
+}
+
+.action-button:hover {
+	background-color: black;
+	color: white;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 768px) {
+	.action-button {
+		padding: 8px 16px;
+	}
+}
+
+/* CSS for responsive design */
+@media only screen and (max-width: 768px) {
+	/* Adjustments for smaller screens */
+
+	/* Header */
+	header {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.logo {
+		margin-bottom: 10px;
+	}
+
+	nav {
+		margin-top: 10px;
+		margin-left: 0;
+	}
+
+	/* Banner */
+	.banner {
+		height: auto;
+		padding: 40px 20px;
+	}
+
+	.banner h1 {
+		font-size: 40px;
+	}
+
+	.banner p {
+		font-size: 18px;
+	}
+
+	/* About section */
+	.about-content {
+		width: 100%;
+	}
+
+	/* Education section */
+	.education-content {
+		width: 100%;
+	}
+
+	/* Certificate section */
+	.certificate-content {
+		width: 100%;
+	}
+
+	/* Gallery section */
+	.gallery-item {
+		flex-basis: calc(50% - 10px);
+	}
+}
+
+@media only screen and (max-width: 480px) {
+	/* Further adjustments for smaller screens */
+
+	/* Banner */
+	.banner h1 {
+		font-size: 30px;
+	}
+
+	.banner p {
+		font-size: 16px;
+	}
+
+	/* Education section */
+	.education-item,
+	.certificate-item {
+		text-align: center;
+	}
+
+	.year-subject,
+	.year,
+	.certificate-link {
+		margin-top: 5px;
+	}
+
+	/* Gallery section */
+	.gallery-item {
+		flex-basis: 100%;
+	}
+}
