--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ li a {
 
 /* CSS for education section */
 .education-section {
-	background-color: #f9f9f9;
+	background-color: white;
 	padding: 20px;
 	width: 100%;
 	display: flex;
@@ -165,7 +165,7 @@ li a {
 }
 
 .certificate-section {
-	background-color: #f9f9f9;
+	background-color: white;
 	padding: 20px;
 	width: 100%;
 	display: flex;
@@ -449,3 +449,23 @@ footer {
 		flex-basis: 100%;
 	}
 }
+
+.github-chart {
+    text-align: center;
+    padding: 20px;
+    background-color: #f9f9f9;
+  }
+  
+  .github-chart h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .chart-container {
+    display: flex;
+    justify-content: center;
+
+  }
+  
+  /* Add any additional styling for the GitHub contribution chart here */
+  
