--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0px;
-
+    cursor: url(https://cdn.custom-cursor.com/db/5034/32/arrow2850.png) , default !important;
 }
 
 main {}
@@ -48,6 +48,8 @@ li:hover {
     color: black;
     background-color: black;
     color: white;
+
+    cursor: url(https://cdn.custom-cursor.com/db/5033/32/arrow2850.png), default !important;
 }
 
 li a {
@@ -57,6 +59,7 @@ li a {
     font-weight: 100;
     color: white;
 
+    cursor: url(https://cdn.custom-cursor.com/db/5033/32/arrow2850.png), default !important;
 }
 
 
@@ -202,6 +205,8 @@ li a {
 
 .college a:hover {
     color: black;
+
+    cursor: url(https://cdn.custom-cursor.com/db/5033/32/arrow2850.png), default !important;
 }
 
 .year {
@@ -215,6 +220,8 @@ li a {
 
 .certificate-link a:hover {
     color: black;
+
+    cursor: url(https://cdn.custom-cursor.com/db/5033/32/arrow2850.png), default !important;
 }
 
 /* CSS for gallery section */
@@ -375,6 +382,8 @@ footer {
 .action-button:hover {
     background-color: black;
     color: white;
+
+    cursor: url(https://cdn.custom-cursor.com/db/5033/32/arrow2850.png), default !important;
 }
 
 /* Responsive Styles */
