--- a/css/style.css
+++ b/css/style.css
@@ -37,17 +37,14 @@ ul {
 
 li {
     color: white;
-    padding: 5px;
+    padding: 0 15px 0 0;
     max-width: 80px;
     text-align: center;
 }
 
 /* CSS for hover effect */
-li:hover {
+li a:hover {
     color: black;
-    background-color: black;
-    color: white;
-
     cursor: url(https://cdn.custom-cursor.com/db/5033/32/arrow2850.png), default !important;
 }
 
@@ -112,6 +109,12 @@ li a {
 }
 
 .education-content h2 {
+    text-align: center;
+    font-family: Verdana;
+    font-size: 30px;
+}
+
+.education-content h3 {
     text-align: center;
     font-family: Verdana;
     font-size: 30px;
