--- a/css/school.css
+++ b/css/school.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #f1f1f1;
+    background-color: white;
     padding: 10px;
   }
 
