--- a/css/school.css
+++ b/css/school.css
@@ -17,7 +17,7 @@
   }
 
   .dropdown-content {
-    display: none;
+    display: inline-block;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
