--- a/css/school.css
+++ b/css/school.css
@@ -1,45 +1,4 @@
-.header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: white;
-    padding: 10px;
-  }
-
-  .logo {
-    width: 100px;
-    height: auto;
-  }
-
-  .navigation {
-    position: relative;
-    margin-left: auto; 
-  }
-
-  .dropdown-content {
-    display: inline-block;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #f1f1f1;
-  }
-  .banner {
+.banner {
     position: relative;
     width: 100%;
     height: 300px;
@@ -60,6 +19,21 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+  }
+
+  .menu-bar {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 5px;
+    border-radius: 5px;
+  }
+
+  .menu-bar a {
+    margin-right: 10px;
+    color: #333;
+    text-decoration: none;
   }
 
   /* Keyframe animation for the slideshow */
@@ -92,4 +66,3 @@
       transform: translateX(0%);
     }
   }
-  
