--- a/css/school.css
+++ b/css/school.css
@@ -1,68 +1,5 @@
-.banner {
-    position: relative;
-    width: 100%;
-    height: 300px;
-    overflow: hidden;
-  }
-
-  .slideshow {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    animation: slide 10s infinite;
-  }
-
-  .slide {
-    flex: 1;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-  }
-
-  .menu-bar {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: rgba(255, 255, 255, 0.7);
-    padding: 5px;
-    border-radius: 5px;
-  }
-
-  .menu-bar a {
-    margin-right: 10px;
-    color: #333;
+.navbar{
+    display: inline-block;
     text-decoration: none;
-  }
-
-  /* Keyframe animation for the slideshow */
-  @keyframes slide {
-    0% {
-      transform: translateX(0%);
-    }
-    20% {
-      transform: translateX(0%);
-    }
-    25% {
-      transform: translateX(-100%);
-    }
-    45% {
-      transform: translateX(-100%);
-    }
-    50% {
-      transform: translateX(-200%);
-    }
-    70% {
-      transform: translateX(-200%);
-    }
-    75% {
-      transform: translateX(-100%);
-    }
-    95% {
-      transform: translateX(-100%);
-    }
-    100% {
-      transform: translateX(0%);
-    }
-  }
+    display: inline;
+}
