--- a/css/carmania.css
+++ b/css/carmania.css
@@ -1,5 +1,4 @@
 
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -81,7 +80,8 @@ body {
     font-style: italic;
   }
   .contact-section {
-    background-color: #f9f9f9;
+    background-color: red;
+    color: black;
     padding: 20px;
   }
   
@@ -97,9 +97,27 @@ body {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    color: black;
   }
   
   .contact-section ul li {
     display: inline;
     margin-right: 10px;
+    color: black;
+    padding:16px;
+    border: black;
   }
+
+  .contact-section ul li a{
+    display: inline;
+    margin-right: 10px;
+    color: black;
+    padding:16px;
+    border: black;
+  }
+
+  .contact{
+    padding: 0 15px 0 0;
+    max-width: 80px;
+    text-align: center;
+}
