--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,18 @@ body {
     cursor: url(https://cdn.custom-cursor.com/db/5034/32/arrow2850.png) , default !important;
 }
 
+
+@media screen and (max-width: 480px) {
+    .logo {
+        max-width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+    li {
+        width: 100%;
+    }
+}
+
 /* CSS for header */
 header {
     background-color: red;
@@ -37,14 +49,17 @@ ul {
 
 li {
     color: white;
-    padding: 0 10px 0 0;
-    max-width: 80px;
+    padding: 5px;
+    width: 75px;
     text-align: center;
 }
 
 /* CSS for hover effect */
-li a:hover {
+li:hover {
     color: black;
+    background-color: black;
+    color: white;
+
     cursor: url(https://cdn.custom-cursor.com/db/5033/32/arrow2850.png), default !important;
 }
 
@@ -65,6 +80,7 @@ li a {
     color: black;
     padding: 20px;
     text-align: center;
+    width: 100%;
     height: 600px;
     margin: 0 auto;
     display: flex;
@@ -99,6 +115,7 @@ li a {
 .education-section {
     background-color: white;
     padding: 20px;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -108,7 +125,12 @@ li a {
     max-width: 800px;
 }
 
-.education-content h2 {
+.education-content h2  {
+    text-align: center;
+    font-family: Verdana;
+    font-size: 30px;
+}
+h3{
     text-align: center;
     font-family: Verdana;
     font-size: 30px;
@@ -135,6 +157,7 @@ li a {
 .projects-section {
     background-color: #f2f2f2;
     padding: 20px;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -168,6 +191,7 @@ li a {
 .certificate-section {
     background-color: white;
     padding: 20px;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -273,6 +297,7 @@ li a {
 .about-section {
     background-color: #f9f9f9;
     padding: 20px;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
