--- a/css/grid.css
+++ b/css/grid.css
@@ -1,19 +1,32 @@
 body {
-    margin: 40px;
-  }
-  
-  .wrapper {
+  margin: 40px;
+}
+
+.wrapper {
     display: grid;
-    grid-template-columns: 100px 100px 100px;
     grid-gap: 10px;
-    background-color: white;
-    color: black;
+    grid-template-columns: 100px 100px 100px;
+    background-color: #fff;
+    color: #444;
   }
-  
+
   .box {
-    background-color: black;
-    color: white;
+    background-color: #444;
+    color: #fff;
     border-radius: 5px;
     padding: 20px;
     font-size: 150%;
+
+  }
+
+  .a {
+    grid-column: 1 / span 2;
+  }
+  .b {
+    grid-column: 3 ;
+    grid-row: 1 / span 2;
+  }
+  .c {
+    grid-column: 1 ;
+    grid-row: 2 ;
   }
