--- a/css/form.css
+++ b/css/form.css
@@ -1,6 +1,8 @@
 
 body {
     background-color: ghostwhite;
+    background-image: url(https://assets.newatlas.com/dims4/default/36c89f6/2147483647/strip/true/crop/5000x3502+0+0/resize/2880x2017!/quality/90/?url=http%3A%2F%2Fnewatlas-brightspot.s3.amazonaws.com%2F3e%2Fe8%2F80356654422882922496192fc567%2Fveil-nebula.jpeg);
+  
    
   }
   
@@ -9,6 +11,7 @@ body {
     margin-top: 30px;
     font-size:40px;
     font-style:verdana;
+    color: white;
   }
   
   .form {
@@ -16,9 +19,9 @@ body {
     font-family: Arial, sans-serif;
     margin: 30px auto;
     padding: 20px 50px 20px 20px;
-    background-color: white;
     border: 4px solid black;
     border-radius: 10px;
+    color: white;
   }
   
   label {
@@ -52,8 +55,7 @@ body {
   input[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: green;
-    color: white;
+    color: black;
     border: 2px solid black;
     border-radius: 10px;
     cursor: pointer;
@@ -63,8 +65,7 @@ body {
   input[type="reset"]{
     width: 100%;
     padding: 10px;
-    background-color: green;
-    color: white;
+    color: black;
     border: 2px solid black;
     border-radius: 10px;
     cursor: pointer;
@@ -72,14 +73,14 @@ body {
   }
   
   input[type="reset"] {
-    background-color: red;
     margin:10px;
+    color: black;
   }
   
   input[type="reset"]:hover {
-    background-color: green;
+    background-color: black;
   }
   input[type="submit"]:hover{
-    background-color: red;
+    background-color: black;
   }
   
