--- a/css/index.css
+++ b/css/index.css
@@ -86,6 +86,7 @@ li a {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: "img/7.jpeg";
 }
 
 .banner h1 {
@@ -273,7 +274,7 @@ h3{
     width: 100%;
     height: auto;
     border: 1px solid black;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
 @keyframes bounce {
