to clearn folder

--- a/css/index.css
+++ b/css/index.css
@@ -244,7 +244,7 @@ h3{
 
 /* CSS for gallery section */
 .gallery-section {
-    padding: 20px;
+    padding: 0;
     background-color: #f9f9f9;
     text-align: center;
 }
